--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Panel – Tidyzenic</title>
+    <title>Admin Dashboard – Tidyzenic</title>
     <link href="/styles.css" rel="stylesheet" />
-    <script defer src="/admin/js/sidebar.js"></script>
     <style>
       .nav-link {
         display: flex;
@@ -16,19 +15,17 @@
         transition: background 0.2s;
         color: #374151;
       }
+
       .nav-link:hover {
         background: #eff6ff;
-      }
-      .sidebar-open {
-        transform: translateX(0) !important;
       }
     </style>
   </head>
 
-  <body class="h-full bg-gradient-to-br from-gray-100 to-white text-gray-900">
-    <!-- Mobile Header with Hamburger -->
-    <header class="md:hidden flex items-center justify-between p-4 shadow-sm bg-white sticky top-0 z-50">
-      <div class="flex items-center space-x-3">
+  <body class="h-full bg-gray-100 text-gray-900">
+    <!-- Mobile Header -->
+    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow-sm sticky top-0 z-50">
+      <div class="flex items-center space-x-2">
         <button id="menuToggle" class="text-gray-700 focus:outline-none">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
@@ -38,15 +35,15 @@
       </div>
     </header>
 
-    <div class="flex h-screen overflow-hidden">
+    <div class="flex h-screen overflow-hidden relative">
       <!-- Sidebar -->
       <aside
         id="sidebar"
-        class="fixed inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 md:relative md:z-auto md:flex flex-col transition-transform duration-300 ease-in-out"
+        class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out md:flex flex-col"
       >
-        <div class="p-6 border-b flex items-center space-x-4">
+        <div class="p-6 border-b flex items-center space-x-3">
           <img id="logo" src="/assets/logo-placeholder.png" class="w-10 h-10 rounded-full shadow-md" alt="Logo" />
-          <h1 id="bizName" class="text-xl font-bold truncate">Business</h1>
+          <h1 id="bizName" class="text-lg font-bold uppercase truncate">Business</h1>
         </div>
 
         <nav class="flex-1 overflow-y-auto p-4 space-y-1 font-medium">
@@ -78,34 +75,31 @@
         </div>
       </aside>
 
-      <!-- Backdrop for Mobile -->
+      <!-- Backdrop -->
       <div
         id="sidebarBackdrop"
         class="fixed inset-0 z-30 bg-black bg-opacity-40 backdrop-blur-sm hidden md:hidden"
       ></div>
 
       <!-- Main Content -->
-      <main class="flex-1 p-4 md:p-6 overflow-y-auto transition-all duration-300">
-        <h2 class="text-2xl font-semibold mb-4">Welcome to your Admin Dashboard</h2>
+      <main class="flex-1 overflow-y-auto p-4 md:p-8 md:ml-72 transition-all duration-300">
+        <h2 class="text-2xl font-semibold mb-2">Welcome to your Admin Dashboard</h2>
         <p class="text-gray-600">Manage services, staff, clients, and more all in one place.</p>
       </main>
     </div>
 
-    <!-- Scripts -->
     <script>
       const toggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
       const backdrop = document.getElementById("sidebarBackdrop");
 
       toggle?.addEventListener("click", () => {
-        sidebar.classList.add("sidebar-open");
         sidebar.classList.remove("-translate-x-full");
         backdrop.classList.remove("hidden");
         document.body.classList.add("overflow-hidden");
       });
 
       backdrop?.addEventListener("click", () => {
-        sidebar.classList.remove("sidebar-open");
         sidebar.classList.add("-translate-x-full");
         backdrop.classList.add("hidden");
         document.body.classList.remove("overflow-hidden");
@@ -126,7 +120,7 @@
         try {
           const res = await fetch(`${API_BASE}/api/business?subdomain=${subdomain}`);
           const data = await res.json();
-          if (data.business_name) bizNameEl.textContent = data.business_name;
+          if (data.business_name) bizNameEl.textContent = data.business_name.toUpperCase();
           if (data.logo_filename) logoEl.src = `/uploads/${data.logo_filename}`;
         } catch (err) {
           console.error("⚠️ Failed to load business info:", err);
