--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -1,106 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Dashboard – Tidyzenic</title>
-  <link href="/styles.css" rel="stylesheet" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard – Tidyzenic</title>
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
 
-<body class="h-full bg-gray-100 text-gray-900">
-  <!-- Mobile Header -->
-  <header class="md:hidden flex items-center justify-between p-4 bg-white shadow z-50 sticky top-0">
-    <div class="flex items-center space-x-2">
-      <button id="menuToggle" class="text-gray-700 focus:outline-none">
-        <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-      <span class="font-bold text-lg text-blue-600">Admin</span>
-    </div>
-  </header>
-
-  <div class="flex h-screen overflow-hidden relative">
-    <!-- Sidebar -->
-    <aside id="sidebar" class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-32">
-      <div class="logo-section p-6 flex items-center space-x-3 sticky top-0 bg-white border-b shadow z-10">
-        <img src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
-        <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
-      </div>
-
-      <div class="flex-1 overflow-y-auto p-4 space-y-1 font-medium text-gray-700">
-        <a href="/admin/dashboard.html" class="block px-4 py-2 rounded bg-blue-50 text-blue-700">🏠 Dashboard</a>
-        <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
-        <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
-        <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
-        <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
-        <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
-        <a href="/admin/invoices.html" class="block px-4 py-2 rounded hover:bg-blue-50">📄 Invoices</a>
-        <a href="/admin/payments.html" class="block px-4 py-2 rounded hover:bg-blue-50">💳 Payments</a>
-        <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
-        <a href="/admin/notifications.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
-        <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🌟 Reviews</a>
-        <a href="/admin/marketing.html" class="block px-4 py-2 rounded hover:bg-blue-50">📣 Marketing</a>
-        <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
-        <a href="/admin/settings.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚙️ Settings</a>
-        <a href="/admin/billing.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧾 Billing</a>
-        <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50">📊 Reports</a>
-        <a href="/admin/support.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
-        <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
-        <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
-      </div>
-
-      <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
-        <button onclick="logout()" class="w-full text-left px-4 py-2 bg-blue-600 text-white rounded-md">
-          🚪 Logout
+  <body class="h-full bg-gray-100 text-gray-900">
+    <!-- Mobile Header -->
+    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow z-50 sticky top-0">
+      <div class="flex items-center space-x-2">
+        <button id="menuToggle" class="text-gray-700 focus:outline-none">
+          <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
         </button>
+        <span class="font-bold text-lg text-blue-600">Admin</span>
       </div>
-    </aside>
+    </header>
 
-    <!-- Backdrop -->
-    <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
+    <div class="flex h-screen overflow-hidden relative">
+      <!-- Sidebar will be injected here -->
+      <div id="sidebar-container"></div>
 
-    <!-- Main Dashboard -->
-    <main class="flex-1 overflow-y-auto p-4 md:p-8 md:ml-72 transition-all duration-300">
-      <h2 class="text-2xl font-semibold mb-4 text-blue-700">Dashboard Overview</h2>
+      <!-- Backdrop for mobile -->
+      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="bg-white rounded-2xl p-6 shadow">
-          <h3 class="text-sm font-medium text-gray-500">Total Clients</h3>
-          <p class="text-3xl font-bold text-blue-700 mt-2">--</p>
+      <!-- Main Content -->
+      <main class="flex-1 overflow-y-auto p-4 md:p-8 md:ml-72 transition-all duration-300">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-700">Welcome to your Admin Dashboard</h2>
+        <div class="bg-white p-6 rounded-2xl shadow">
+          <p>Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.</p>
         </div>
-        <div class="bg-white rounded-2xl p-6 shadow">
-          <h3 class="text-sm font-medium text-gray-500">Total Bookings</h3>
-          <p class="text-3xl font-bold text-blue-700 mt-2">--</p>
-        </div>
-        <div class="bg-white rounded-2xl p-6 shadow">
-          <h3 class="text-sm font-medium text-gray-500">Monthly Revenue (€)</h3>
-          <p class="text-3xl font-bold text-blue-700 mt-2">--</p>
-        </div>
-      </div>
+      </main>
+    </div>
 
-      <div class="mt-10 bg-white p-6 rounded-2xl shadow">
-        <h3 class="text-lg font-semibold mb-2 text-gray-700">Recent Activity</h3>
-        <p class="text-sm text-gray-500">No recent data yet. Connect your system to see real-time insights.</p>
-      </div>
-    </main>
-  </div>
+    <script>
+      // Dynamically load the sidebar
+      fetch('/admin/sidebar.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('sidebar-container').innerHTML = html;
 
-  <script>
-    // Sidebar toggle
-    document.getElementById('menuToggle')?.addEventListener('click', () => {
-      const sidebar = document.getElementById('sidebar');
-      const backdrop = document.getElementById('sidebarBackdrop');
-      sidebar.classList.toggle('-translate-x-full');
-      backdrop.classList.toggle('hidden');
-    });
+          // Setup toggle logic AFTER sidebar is injected
+          const menuBtn = document.getElementById('menuToggle');
+          const sidebar = document.getElementById('sidebar');
+          const backdrop = document.getElementById('sidebarBackdrop');
 
-    // Logout
-    function logout() {
-      fetch('/auth/logout', { method: 'POST' }).then(() => {
-        window.location.href = '/login.html';
-      });
-    }
-  </script>
-</body>
+          menuBtn?.addEventListener('click', () => {
+            sidebar?.classList.toggle('-translate-x-full');
+            backdrop?.classList.toggle('hidden');
+          });
+
+          backdrop?.addEventListener('click', () => {
+            sidebar?.classList.add('-translate-x-full');
+            backdrop?.classList.add('hidden');
+          });
+        });
+    </script>
+  </body>
 </html>
