--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,79 +1,41 @@
-<!DOCTYPE html>
-<html lang="en" class="h-full">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Dashboard – Tidyzenic</title>
-    <link href="/styles.css" rel="stylesheet" />
-  </head>
+<!-- public/admin/sidebar.html -->
+<aside
+  id="sidebar"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-32"
+>
+  <!-- Logo -->
+  <div class="logo-section p-6 flex items-center space-x-3 sticky top-0 bg-white border-b shadow z-10">
+    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
+    <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
+  </div>
 
-  <body class="h-full bg-gray-100 text-gray-900">
-    <!-- Mobile Header -->
-    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow z-50 sticky top-0">
-      <div class="flex items-center space-x-2">
-        <button id="menuToggle" class="text-gray-700 focus:outline-none">
-          <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-        <span class="font-bold text-lg text-blue-600">Admin</span>
-      </div>
-    </header>
+  <!-- Navigation -->
+  <div class="flex-1 overflow-y-auto p-4 space-y-1 font-medium text-gray-700">
+    <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
+    <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
+    <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
+    <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
+    <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
+    <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
+    <a href="/admin/invoices.html" class="block px-4 py-2 rounded hover:bg-blue-50">📄 Invoices</a>
+    <a href="/admin/payments.html" class="block px-4 py-2 rounded hover:bg-blue-50">💳 Payments</a>
+    <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
+    <a href="/admin/notifications.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
+    <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🌟 Reviews</a>
+    <a href="/admin/marketing.html" class="block px-4 py-2 rounded hover:bg-blue-50">📣 Marketing</a>
+    <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
+    <a href="/admin/settings.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚙️ Settings</a>
+    <a href="/admin/billing.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧾 Billing</a>
+    <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50">📊 Reports</a>
+    <a href="/admin/support.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
+    <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
+    <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
+  </div>
 
-    <div class="flex h-screen overflow-hidden relative">
-      <!-- Sidebar -->
-      <aside
-        id="sidebar"
-        class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-32"
-      >
-<div class="logo-section p-6 flex items-center space-x-3 sticky top-0 bg-white border-b shadow z-10">
-  <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
-<h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
-</div>
-
-
-        <!-- Scrollable Nav -->
-        <div class="flex-1 overflow-y-auto p-4 space-y-1 font-medium text-gray-700">
-          <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
-          <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
-          <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
-          <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
-          <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
-          <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
-          <a href="/admin/invoices.html" class="block px-4 py-2 rounded hover:bg-blue-50">📄 Invoices</a>
-          <a href="/admin/payments.html" class="block px-4 py-2 rounded hover:bg-blue-50">💳 Payments</a>
-          <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
-          <a href="/admin/notifications.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
-          <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🌟 Reviews</a>
-          <a href="/admin/marketing.html" class="block px-4 py-2 rounded hover:bg-blue-50">📣 Marketing</a>
-          <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
-          <a href="/admin/settings.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚙️ Settings</a>
-          <a href="/admin/billing.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧾 Billing</a>
-          <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50">📊 Reports</a>
-          <a href="/admin/support.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
-          <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
-          <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
-        </div>
-
-        <!-- Logout -->
-        <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
-          <button onclick="logout()" class="w-full text-left px-4 py-2 bg-blue-600 text-white rounded-md">
-            🚪 Logout
-          </button>
-        </div>
-      </aside>
-
-      <!-- Backdrop -->
-      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
-
-      <!-- Main Content -->
-      <main class="flex-1 overflow-y-auto p-4 md:p-8 md:ml-72 transition-all duration-300">
-        <h2 class="text-2xl font-semibold mb-2 text-blue-700">Welcome to your Admin Dashboard</h2>
-        <p class="text-gray-600">Manage services, staff, clients, and more all in one place.</p>
-      </main>
-    </div>
-
-    <!-- Script -->
-    <script src="/admin/js/sidebar.js"></script>
-  </body>
-</html>
+  <!-- Logout -->
+  <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
+    <button onclick="logout()" class="w-full text-left px-4 py-2 bg-blue-600 text-white rounded-md">
+      🚪 Logout
+    </button>
+  </div>
+</aside>
