--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
 
-  <body class="min-h-screen bg-gray-100 text-gray-900 overflow-auto">
+  <body class="min-h-screen bg-gray-100 text-gray-900">
     <!-- Mobile Header -->
-    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow z-50 sticky top-0">
+    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
       <div class="flex items-center space-x-2">
         <button id="menuToggle" class="text-gray-700 focus:outline-none">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -21,25 +21,27 @@
     </header>
 
     <!-- Main Layout -->
-    <div class="flex min-h-screen">
-      <!-- Sidebar (injected) -->
-      <div id="sidebar-container" class="w-72 hidden md:block"></div>
+    <div class="flex min-h-screen relative">
+      <!-- Sidebar placeholder -->
+      <div id="sidebar-container" class="hidden md:block w-72"></div>
 
-      <!-- Mobile Backdrop -->
+      <!-- Mobile backdrop -->
       <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-      <!-- Main Section -->
+      <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
         <div class="max-w-3xl mx-auto">
           <h2 class="text-2xl font-semibold mb-4 text-blue-700">Welcome to your Admin Dashboard</h2>
           <div class="bg-white p-6 rounded-2xl shadow">
-            <p>Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.</p>
+            <p>
+              Manage your services, bookings, clients and more. Use the sidebar to navigate your admin tools.
+            </p>
           </div>
         </div>
       </main>
     </div>
 
-    <!-- Load Sidebar and JS -->
+    <!-- Sidebar Loader -->
     <script src="/admin/js/load-sidebar.js" defer></script>
   </body>
 </html>
