--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,16 +1,25 @@
-<!-- public/admin/sidebar.html -->
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-32"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
 >
-  <!-- Logo -->
-  <div class="logo-section p-6 flex items-center space-x-3 sticky top-0 bg-white border-b shadow z-10">
-    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
-    <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
+  <!-- Logo Header -->
+  <div class="p-4 flex items-center gap-3 sticky top-0 bg-white border-b shadow z-10">
+    <img
+      id="logo"
+      src="/assets/logo-placeholder.png"
+      alt="Logo"
+      class="w-10 h-10 rounded-full shadow-md object-cover"
+    />
+    <h1
+      id="bizName"
+      class="text-lg font-bold uppercase truncate text-blue-600"
+    >
+      Business
+    </h1>
   </div>
 
   <!-- Navigation -->
-  <div class="flex-1 overflow-y-auto p-4 space-y-1 font-medium text-gray-700">
+  <nav class="flex-1 overflow-y-auto px-4 py-6 space-y-1 font-medium text-gray-700">
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
     <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
@@ -30,11 +39,14 @@
     <a href="/admin/support.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
     <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
-  </div>
+  </nav>
 
-  <!-- Logout -->
+  <!-- Logout Button -->
   <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
-    <button onclick="logout()" class="w-full text-left px-4 py-2 bg-blue-600 text-white rounded-md">
+    <button
+      onclick="logout()"
+      class="w-full text-left px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition"
+    >
       🚪 Logout
     </button>
   </div>
