--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,6 +1,6 @@
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 md:block transition-transform duration-300 ease-in-out flex flex-col"
 >
   <!-- Logo/Header -->
   <div class="p-4 flex items-center gap-3 sticky top-0 bg-white border-b shadow z-10">
