--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -2,13 +2,13 @@
   id="sidebar"
   class="w-72 md:block fixed md:relative inset-y-0 left-0 z-40 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
 >
-  <!-- Logo -->
+  <!-- Sticky Header -->
   <div class="p-4 flex items-center gap-3 sticky top-0 bg-white border-b shadow z-10">
     <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full object-cover" />
     <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
   </div>
 
-  <!-- Navigation Links -->
+  <!-- Scrollable Nav -->
   <nav class="flex-1 overflow-y-auto p-4 space-y-1 text-gray-700 font-medium">
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
